api function + search bar

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    hello
+    <header>
+        <h1>Weather</h1>
+        <form id="weather-form">
+            <input type="text" id="weather-input" minlength="3">
+            <button type="submit">/</button>
+        </form>
+    </header>
 </body>
 </html>
